Added the cart in the system

--- a/Web/Partials/Courses.html
+++ b/Web/Partials/Courses.html
@@ -200,6 +200,12 @@ NAV
                                     </p>
                                 </div>
                             </div>
+
+                            <div class="row" >
+                                <div class="col-sm-12">
+                                    <button type="submit" style="float: right;" class="btn btn-primary" data-ng-click="AddToCart(CourseList)">Add to Cart</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <!-- Student Course View End-->
