--- a/Web/Partials/AddToolkitContent.html
+++ b/Web/Partials/AddToolkitContent.html
@@ -1,13 +1,4 @@
-﻿<script type="text/javascript">
-    $(function () {
-        $('.datepicker').datepicker({
-            autoclose: true,
-            todayBtn: true,
-            todayHighlight: true
-        });
-    });
-</script>
-
+﻿
 <style>
     p {
         margin: 12px 0 11px;
@@ -20,7 +11,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
-                Add Tookit Detail
+                Cart
             </div>
         </div>
     </div>
@@ -39,100 +30,11 @@
                         <div class="row">
                             <div class="col-md-8 col-sm-8">
                                 <p>
-                                    <label for="login-input-login">Tookit Name</label>
-                                    <input type="text" maxlength="255" class="form-control" data-ng-model="ToolkitList.toolkitName" id="login-input-login" placeholder="Toolkit Name">
+                                    You are on the Cart                                    
                                 </p>
                             </div>
                         </div>
 
-                        <div class="row">
-                            <div class="col-md-8 col-sm-8">
-
-                                <p>
-                                    <a href="">Price</a>
-                                    <div class="col-md-3 col-sm-3">
-                                        <select style class="form-control" data-ng-model="ToolkitList.currencyType">
-                                            <option value="1">INR</option>
-                                        </select>
-                                    </div>
-                                    <div class="col-md-9 col-sm-9">
-                                        <input class="form-control" type="number" min="0" data-ng-model="ToolkitList.price" />
-                                    </div>
-
-
-
-                                </p>
-                            </div>
-                        </div>
-
-
-
-                        <div class="row">
-                            <div class="col-md-5 col-sm-5">
-                                <p>
-                                    <label>Free Subscription Description</label>
-                                    <textarea maxlength="1000" class="form-control" id="Text1" data-ng-model="ToolkitList.freeContent.description" placeholder="Free Subscription Description"></textarea>
-                                </p>
-                            </div>
-
-                            <div class="col-md-3 col-sm-3">
-                                <p>
-                                    <label for="login-input-login">Free Subscription File Upload</label>
-                                    <label class="error" id="Label1" style="display: none;"><span class="icon24 errorIcon"></span><span id="Span1"></span></label>
-                                    <input type="file" class="form-control" name="txtFileUpload" id="File1" title="Upload File"
-                                           onchange="angular.element(this).scope().setFiles(this,1);">
-                                    <div data-ng-repeat="document in ToolkitList.freeContent.fileAttachment">{{document.documentName}} (Uploaded) <a href="" ng-click="DeleteFile(ToolkitList.freeContent.fileAttachment,$index)">Delete</a></div>
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-5 col-sm-5">
-                                <p>
-                                    <label for="login-input-login">Public User Description</label>
-                                    <textarea class="form-control" maxlength="1000" id="Textarea1" placeholder="Public User Description" data-ng-model="ToolkitList.publicContent.description"></textarea>
-                                </p>
-
-                                </p>
-                            </div>
-
-                            <div class="col-md-3 col-sm-3">
-                                <p>
-                                    <label for="login-input-login">Public User File Upload</label>
-                                    <label class="error" id="Label2" style="display: none;"><span class="icon24 errorIcon"></span><span id="Span2"></span></label>
-                                    <input type="file" class="form-control" name="txtFileUpload" id="File2" title="Upload File"
-                                           onchange="angular.element(this).scope().setFiles(this,2);">
-                                    <div data-ng-repeat="document in ToolkitList.publicContent.fileAttachment">{{document.documentName}} (Uploaded) <a href="" ng-click="DeleteFile(ToolkitList.publicContent.fileAttachment,$index)">Delete</a></div>
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-5 col-sm-5">
-                                <p>
-                                    <label for="login-input-login">Paid User Description</label>
-                                    <textarea maxlength="1000" class="form-control" id="Textarea2" placeholder="Paid User Description" data-ng-model="ToolkitList.paidContent.description"></textarea>
-
-                                </p>
-                            </div>
-
-                            <div class="col-md-3 col-sm-3">
-                                <p>
-                                    <label for="login-input-login">Paid User File Upload</label>
-                                    <label class="error" id="attachmentLabel" style="display: none;"><span class="icon24 errorIcon"></span><span id="errorAttachmentText"></span></label>
-                                    <input type="file" class="form-control" name="txtFileUpload" id="txtFileUpload" title="Upload File"
-                                           onchange="angular.element(this).scope().setFiles(this,3);">
-                                    <div data-ng-repeat="document in ToolkitList.paidContent.fileAttachment | filter : {isDeleted:false}">{{document.documentName}} (Uploaded) <a href="" ng-click="DeleteFile(ToolkitList.paidContent.fileAttachment,$index)">Delete</a></div>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-8 col-sm-8">
-                                <p>
-                                    <button type="submit" class="btn btn-primary" data-ng-click="SaveToolkit(ToolkitList)">Submit</button>
-                                </p>
-                            </div>
-                        </div>
                     </div>
                 </form>
             </div>
